fix colum on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,9 @@ section {
 		padding-top:20px;
 		padding-bottom:40px;
 	}
+	.fa-4x {
+		font-size: 3em;
+	}
 }
 /*.footer{
 	position:absolute;
